# so_arm100_moveit

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: fake_controllers.yaml  gazebo_so_arm100.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  so_arm100.srdf  stomp_planning.yaml
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
lerobot/scripts/.cache/calibration/so100/: main_follower.json
scripts/: configs.py  move_target.py  moveit_python.py  so_arm100_ros.py
scripts/.cache/calibration/so100/: main_follower.json
urdf/: so_arm100.urdf
